# ebook-extract

./: README.md  moby-dick.epub  moby-dick_metadata.json  pyproject.toml
src/ebook_extract/: __init__.py  main.py
