[project]
name = "ebook-extract"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Salvador Guzman", email = "guzmansalv@gmail.com" }
]
dependencies = [
    "ebooklib>=0.19",
    "beautifulsoup4>=4.13.4",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ebook_extract"]
